--- a/src/components/JobDetail/JobDetail.css
+++ b/src/components/JobDetail/JobDetail.css
@@ -132,6 +132,43 @@
     flex-direction: column;
 }
 
+.ant-modal-footer {
+    display: none;
+}
+.circle-loader-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(255, 255, 255, 0.5); /* Semi-transparent background */
+  z-index: 1000; /* Ensure it's above other content */
+}
+
+/* HTML: <div class="loader"></div> */
+.circle-loader {
+  width: 40px;
+  padding: 8px;
+  aspect-ratio: 1;
+  border-radius: 50%;
+  background: #25b09b;
+  --_m: 
+    conic-gradient(#0000 10%,#000),
+    linear-gradient(#000 0 0) content-box;
+  -webkit-mask: var(--_m);
+          mask: var(--_m);
+  -webkit-mask-composite: source-out;
+          mask-composite: subtract;
+  animation: l3 1s infinite linear;
+}
+@keyframes l3 {to{transform: rotate(1turn)}}
+
+.hidden {
+  display: none;
+}
   @media (max-width: 600px) {
     .job-detail-card-title {
         flex-direction: column;
